1999-06-24  Hippo

	* FvwmAnimate/FvwmAnimate.c: Removed the Gcontext sharing stuff
	* FvwmButtons/*:		ditto
	* FvwmIdent/*:			ditto
	* FvwmScroll/*:			ditto
	* FvwmCpp/*:			ditto
	* FvwmM4/*:			ditto

1999-06-24  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (MoveWindow): fixed windows being moved into the
	void on desk to desk transfers

1999-06-23  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (IconMoveWindow):
	(MoveWindow): move window to cursor position before moving it out of
	the pager

	* FvwmTaskBar/ButtonArray.c (RemoveButton): Grr, why was this function
	broken again?

	* FvwmEvent/FvwmEvent.c (event_table): removed excess events from
	list (I thought I'd put this in the 2.2 branch).

	* FvwmCpp/FvwmCpp.c (main): added missing declaration for tline

	* FvwmAnimate/FvwmAnimate.c: added missing include for time.h

1999-06-23  Hippo

	* Fvwm{M4,Cpp}/Fvwm{M4,Cpp}.{c,1}: added new variable FVWM_CLASS and
	FVWM_COLOR to reflect the visual type used by fvwm.

1999-06-23  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmScript/script.c: increased number of allowed variables to 512

	* FvwmPager/x_pager.c (MoveWindow): raise windows when moving them out
	of the pager

1999-06-22  Paul D. Smith  <psmith@gnu.org>

	* FvwmEvent/Makefile.am (install-exec-local): Make sure the local
	install rule for FvwmAudio supports the DESTDIR variable properly,
	and allows for configure transformations.

1999-06-22  Hippo

	* FvwmConsole/FvwmConsole.c: moved default -name, -title args to before
	user supplied args so that the user can override them.

1999-06-18  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTaskBar/ButtonArray.c (RemoveButton): fixed coredump when
	deleting the last button in list (this time it's really fixed).

1999-06-15  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/FvwmPager.c (Loop):
	(ExitPager):
	* FvwmPager/x_pager.c (DispatchEvent):
	(MoveWindow):
	(IconMoveWindow): use new function ExitPager
