@@ -6,6 +6,7 @@
 	* FvwmScroll/*:			ditto
 	* FvwmCpp/*:			ditto
 	* FvwmM4/*:			ditto
+	* FvwmBanner/FvwmBanner.c: FvwmBanner now shares fvwm's visual type
 
 1999-06-24  Dominik Vogt  <dominik_vogt@gmx.de>
 
